--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "beneficial-binary",
+  "name": "Millz98-uses",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -10,9 +10,17 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.3.2",
     "@astrojs/mdx": "^0.19.0",
     "@astrojs/rss": "^2.4.0",
-    "@astrojs/sitemap": "^1.2.2"
+    "@astrojs/sitemap": "^1.2.2",
+    "astro": "^2.3.2"
+  },
+  "devDependencies": {
+    "cz-conventional-changelog": "^3.3.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
