--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "astro": "^2.3.2"
   },
   "devDependencies": {
-    "cz-conventional-changelog": "^3.3.0"
+    "@typescript-eslint/parser": "^5.59.5",
+    "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^8.40.0",
+    "eslint-plugin-astro": "^0.26.2"
   },
   "config": {
     "commitizen": {
