--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^2.1.3",
     "@astrojs/rss": "^2.4.0",
     "@astrojs/sitemap": "^1.2.2",
-    "astro": "^2.3.2"
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.0.6",
+    "astro": "^2.3.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
     "@typescript-eslint/parser": "^5.59.5",
