--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@altano/remark-astrojs-image-use-component": "^0.0.1-alpha.0",
     "@astrojs/image": "^0.16.7",
     "@astrojs/react": "^2.1.3",
     "@astrojs/rss": "^2.4.0",
