--- a/package.json
+++ b/package.json
@@ -23,13 +23,15 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.8.0",
+    "sharp": "^0.32.1",
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
     "@typescript-eslint/parser": "^5.59.5",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.40.0",
-    "eslint-plugin-astro": "^0.26.2"
+    "eslint-plugin-astro": "^0.26.2",
+    "rehype-add-classes": "^1.0.0"
   },
   "config": {
     "commitizen": {
