--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
+    "@inkdropapp/live-export": "^0.1.8",
     "@typescript-eslint/parser": "^5.59.5",
     "cz-conventional-changelog": "^3.3.0",
+    "dotenv": "^16.0.3",
     "eslint": "^8.40.0",
     "eslint-plugin-astro": "^0.26.2",
     "rehype-add-classes": "^1.0.0"
