--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.0.6",
     "astro": "^2.3.3",
+    "nth-check": "^2.1.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.8.0",
