--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "^18.0.6",
     "astro": "^2.3.3",
     "nth-check": "^2.1.1",
+    "pnpm": "^8.5.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.8.0",
@@ -34,7 +35,8 @@
     "dotenv": "^16.0.3",
     "eslint": "^8.40.0",
     "eslint-plugin-astro": "^0.26.2",
-    "rehype-add-classes": "^1.0.0"
+    "rehype-add-classes": "^1.0.0",
+    "typescript": "^5.0.4"
   },
   "config": {
     "commitizen": {
