--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
-    "@inkdropapp/live-export": "^0.1.8",
+    "@inkdropapp/live-export": "0.2.1",
     "@typescript-eslint/parser": "^5.59.5",
     "cz-conventional-changelog": "^3.3.0",
     "dotenv": "^16.0.3",
