--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-dom": "^18.0.0",
     "react-icons": "^4.8.0",
     "sharp": "^0.32.1",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "^3.0.24",
+    "undici": "^5.22.1"
   },
   "devDependencies": {
     "@inkdropapp/live-export": "0.2.1",
